==> knitschke/STpcInfo2/Src/ssd1306.c <==
#include <string.h>
#include <stdlib.h>
#include "ssd1306.h"
#include "font5x7.h"
#include "mxconstants.h"
#define CMD(c)        do { HAL_GPIO_WritePin( DC_GPIO_Port, DC_Pin, GPIO_PIN_RESET); \
                           ssd1306SendByte( c ); \
                         } while (0);
#define DATA(c)       do { HAL_GPIO_WritePin( DC_GPIO_Port, DC_Pin, GPIO_PIN_SET); \
                           ssd1306SendByte( c ); \
                         } while (0);
#define swap(a, b)       { int16_t t = a; a = b; b = t; }

inline void ssd1306SendByte(uint8_t byte)
{
	HAL_SPI_Transmit  ( &hspi1,  (uint8_t *) &byte, 1, 20) ;
}

void  ssd1306Init(uint8_t vccstate)
{

  HAL_Delay  (100);
  // Initialisation sequence
  CMD(SSD1306_DISPLAYOFF);                    // 0xAE
  CMD(SSD1306_SETDISPLAYCLOCKDIV);            // 0xD5
  CMD(0x80);                                  // the suggested ratio 0x80
  CMD(SSD1306_SETMULTIPLEX);                  // 0xA8
  CMD(0x3F);
  CMD(SSD1306_SETDISPLAYOFFSET);              // 0xD3
  CMD(0x0);                                   // no offset
  CMD(SSD1306_SETSTARTLINE | 0x0);            // line #0
  CMD(SSD1306_CHARGEPUMP);                    // 0x8D
  if (vccstate == SSD1306_EXTERNALVCC) 
  { CMD(0x10); }
  else 
  { CMD(0x14); }
  CMD(SSD1306_MEMORYMODE);                    // 0x20
  CMD(0x00);                                  // 0x0 act like ks0108
  CMD(SSD1306_SEGREMAP | 0x1);
  CMD(SSD1306_COMSCANDEC);
  CMD(SSD1306_SETCOMPINS);                    // 0xDA
  CMD(0x12);
  CMD(SSD1306_SETCONTRAST);                   // 0x81
  if (vccstate == SSD1306_EXTERNALVCC) 
  { CMD(0x9F); }
  else 
  { CMD(0xCF); }
  CMD(SSD1306_SETPRECHARGE);                  // 0xd9
  if (vccstate == SSD1306_EXTERNALVCC) 
  { CMD(0x22); }
  else 
  { CMD(0xF1); }
  CMD(SSD1306_SETVCOMDETECT);                 // 0xDB
  CMD(0x40);
  CMD(SSD1306_DISPLAYALLON_RESUME);           // 0xA4
  CMD(SSD1306_NORMALDISPLAY);                 // 0xA6
  HAL_Delay  (100);
  ssd1306TurnOn();
}

void  ssd1306DrawChar(int16_t x, int16_t y, uint8_t c, uint8_t size, 
uint16_t color, uint16_t layer) {

  if( (x >= _width)            || // Clip right
      (y >= _height)           || // Clip bottom
      ((x + 6 * size - 1) < 0) || // Clip left
      ((y + 8 * size - 1) < 0))   // Clip top
  return;

  for (int8_t i=0; i<6; i++ ) {
    int8_t line;
    if (i == 5) 
    line = 0x0;
    else 
    line = (int8_t)*(font5x7+(c*5)+i);
    for (int8_t j = 0; j<8; j++) {
      if (line & 0x1) {
        if (size == 1) // default size
        ssd1306DrawPixel(x+i, y+j, color, layer);
        else {  // big size
          ssd1306DrawRect(x+(i*size), y+(j*size), size, size, color, layer);
        } 
      } 
      line >>= 1;
    }
  }
}
