==> pacabot/zhonx2/pacabot/src/oled/ssd1306.c <==
#include <string.h>
#include <stdio.h>
#include <stdlib.h>
#include "stm32f4xx_gpio.h"
#include "stm32f4xx_rcc.h"
#include "stm32f4xx_spi.h"
#include "hal/hal_os.h"
#include "oled/ssd1306_peripherals.h"
#include "oled/ssd1306.h"
#include "oled/smallfonts.h"
#define DELAY(ms)     	hal_os_sleep(ms);
#define swap(a, b){ \
		unsigned char c; \
		c = a; \
		a = b; \
		b = c; \
}
#define CMD(c)  GPIO_ResetBits(CS_GPIO_PORT, CS_PIN); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				GPIO_ResetBits(DC_GPIO_PORT, DC_PIN); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				SPI_I2S_SendData(SPIx, c); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				while(SPI_I2S_GetFlagStatus(SPIx, SPI_I2S_FLAG_BSY) == SET); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				GPIO_SetBits(CS_GPIO_PORT, CS_PIN); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				asm ("NOP"); asm ("NOP"); asm ("NOP"); \
				asm ("NOP"); asm ("NOP"); asm ("NOP");

void ssd1306SendByte(unsigned char byte)
{
	signed char i;

	// Make sure clock pin starts high
	GPIO_WriteBit(SPIx_SCK_GPIO_PORT, SPIx_SCK_PIN, 1);

	// Write from MSB to LSB
	for (i=7; i>=0; i--)
	{
		// Set clock pin low
		GPIO_WriteBit(SPIx_SCK_GPIO_PORT, SPIx_SCK_PIN, 0);
		// Set data pin high or low depending on the value of the current bit
		GPIO_WriteBit(SPIx_MOSI_GPIO_PORT, SPIx_MOSI_PIN, byte & (1 << i) ? 1 : 0);
		// Set clock pin high
		GPIO_WriteBit(SPIx_SCK_GPIO_PORT, SPIx_SCK_PIN, 1);
	}
}

static void ssd1306DrawChar(unsigned int x, unsigned int y, unsigned char c, const FONT_DEF *font)
{
	unsigned char col, column[font->u8Width];

	// Check if the requested character is available
	if ((c >= font->u8FirstChar) && (c <= font->u8LastChar))
	{
		// Retrieve appropriate columns from font data
		for (col = 0; col < font->u8Width; col++)
		{
			column[col] = font->au8FontTable[((c - 32) * font->u8Width) + col];    // Get first column of appropriate character
		}
	}
	else
	{
		// Requested character is not available in this font ... send a space instead
		for (col = 0; col < font->u8Width; col++)
		{
			column[col] = 0xFF;    // Send solid space
		}
	}

	// Render each column
	unsigned int xoffset, yoffset;
	for (xoffset = 0; xoffset < font->u8Width; xoffset++)
	{
		for (yoffset = 0; yoffset < (font->u8Height + 1); yoffset++)
		{
			unsigned char bit = 0x00;
			bit = (column[xoffset] << (8 - (yoffset + 1)));     // Shift current row bit left
			bit = (bit >> 7);                                   // Shift current row but right (results in 0x01 for black, and 0x00 for white)
			if (bit)
			{
				ssd1306DrawPixel(x + xoffset, y + yoffset);
			}
		}
	}
}

void ssd1306Init(unsigned char vccstate)
{
	// Initialize peripherals
	ssd1306_GPIO_Config();
	ssd1306_SPI_Config();

	// Reset the LCD
	GPIO_WriteBit(RST_GPIO_PORT, RST_PIN, 1);
	hal_os_sleep(10);
	GPIO_WriteBit(RST_GPIO_PORT, RST_PIN, 0);
	hal_os_sleep(10);
	GPIO_WriteBit(RST_GPIO_PORT, RST_PIN, 1);
	hal_os_sleep(20);

	// Initialisation sequence
	CMD(SSD1306_DISPLAYOFF);                    // 0xAE
	CMD(SSD1306_SETLOWCOLUMN | 0x0);            // low col = 0
	CMD(SSD1306_SETHIGHCOLUMN | 0x0);           // hi col = 0
	CMD(SSD1306_SETSTARTLINE | 0x0);            // line #0
	CMD(SSD1306_SETCONTRAST);                   // 0x81
	CMD(130);									// contrast (0-255)
	if (vccstate == SSD1306_EXTERNALVCC)
	{
		CMD(0x9F);
	}
	else
	{
		CMD(0xCF);
	}
	CMD(0xa1);                                  // setment remap 95 to 0 (?)
	CMD(SSD1306_NORMALDISPLAY);                 // 0xA6
	CMD(SSD1306_DISPLAYALLON_RESUME);           // 0xA4
	CMD(SSD1306_SETMULTIPLEX);                  // 0xA8
	CMD(0x3F);                                  // 0x3F 1/64 duty
	CMD(SSD1306_SETDISPLAYOFFSET);              // 0xD3
	CMD(0x0);                                   // no offset
	CMD(SSD1306_SETDISPLAYCLOCKDIV);            // 0xD5
	CMD(0x80);                                  // the suggested ratio 0x80
	CMD(SSD1306_SETPRECHARGE);                  // 0xd9
	if (vccstate == SSD1306_EXTERNALVCC)
	{
		CMD(0x22);
	}
	else
	{
		CMD(0xF1);
	}
	CMD(SSD1306_SETCOMPINS);                    // 0xDA
	CMD(0x12);                                  // disable COM left/right remap
	CMD(SSD1306_SETVCOMDETECT);                 // 0xDB
	CMD(0x40);                                  // 0x20 is default?
	CMD(SSD1306_MEMORYMODE);                    // 0x20
	CMD(0x00);                                  // 0x0 act like ks0108
	CMD(SSD1306_SEGREMAP | 0x1);
	CMD(SSD1306_COMSCANDEC);
	CMD(SSD1306_CHARGEPUMP);                    //0x8D
	if (vccstate == SSD1306_EXTERNALVCC)
	{
		CMD(0x10);
	}
	else
	{
		CMD(0x14);
	}

	// Enabled the OLED panel
	CMD(SSD1306_DISPLAYON);
}
